HighFreqFSK/HighFSKRx.cydsn/BUILD.log
--------------- Build Started: 05/26/2018 23:27:07 Project: HighFSKRx, Configuration: ARM GCC 5.4-2016-q2-update Debug ---------------
The code generation step is up to date.
arm-none-eabi-gcc.exe -mcpu=cortex-m3 -mthumb -I. -IGenerated_Source\PSoC5 -Wa,-alh=.\CortexM3\ARM_GCC_541\Debug/main.lst -g -D DEBUG -D CY_CORE_ID=0 -Wall -ffunction-sections -ffat-lto-objects -Og -c main.c -o .\CortexM3\ARM_GCC_541\Debug\main.o
main.c: In function 'Bit_Timer':
main.c:115:57: error: expected statement before ')' token
         if((dataFlag == FALSE) && (decodeFlag == FALSE))){ //looking for prefix
                                                         ^
main.c:127:10: error: expected '}' before 'else'
         }else{ // looking for data bits, can have less accuracy
          ^
main.c: At top level:
main.c:176:1: error: expected identifier or '(' before '}' token
 } // end of CY_ISR(HighF_LevelCount)
 ^
main.c: In function 'CheckParity':
main.c:227:5: warning: type of 'crabs' defaults to 'int' [-Wimplicit-int]
 int CheckParity(crabs)
     ^
The command 'arm-none-eabi-gcc.exe' failed with exit code '1'.
--------------- Build Failed: 05/26/2018 23:27:07 ---------------
